topmonks.cz - přidán div tm-bgnd-wrapper

--- a/www.topmonks.cz/src/html/index.html
+++ b/www.topmonks.cz/src/html/index.html
@@ -306,17 +306,19 @@
 </section>
 
 <section class="costumers">
-  <div class="mdc-layout-grid tm-layout-wrapper">
-    <div class="mdc-layout-grid__inner">
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-        <h2>Naši zákazníci říkají, že...</h2>
-        <blockquote>
-          <p>TopMonks jsou vyjíměční především proto, že nám rozumí.</p>
-        </blockquote>
-        <figure class="name">
-          <img class="tm-testimonial__picture" src="/images/hp/sechovec.jpg" alt="[foto] Jan Sechovec">
-          <figcaption>Jan Sechovec<br>Universal Digital Punker</figcaption>
-        </figure>
+  <div class="tm-bgnd-wrapper">
+    <div class="mdc-layout-grid tm-layout-wrapper">
+      <div class="mdc-layout-grid__inner">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+          <h2>Naši zákazníci říkají, že...</h2>
+          <blockquote>
+            <p>TopMonks jsou vyjíměční především proto, že nám rozumí.</p>
+          </blockquote>
+          <figure class="name">
+            <img class="tm-testimonial__picture" src="/images/hp/sechovec.jpg" alt="[foto] Jan Sechovec">
+            <figcaption>Jan Sechovec<br>Universal Digital Punker</figcaption>
+          </figure>
+        </div>
       </div>
     </div>
   </div>
