topmonks.cz prettier

--- a/www.topmonks.cz/src/html/index.html
+++ b/www.topmonks.cz/src/html/index.html
@@ -282,7 +282,7 @@
       </div>
       <div
         class="tm-case-studies__clients mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
-        <img src="/www.topmonks.cz/src/icons/img_logo_adler.svg" alt="">
+        <img src="/icons/img_logo_adler.svg" alt="">
         <h3>Adler</h3>
         <p>Řešení na míru automatizující proces nákupu, marketingu a prodeje
           s&nbsp;vizí, že aplikace budou v&nbsp;budoucnu integrovány do jedné komplexní
@@ -297,7 +297,7 @@
       </div>
       <div
         class="tm-case-studies__clients mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
-        <img src="/www.topmonks.cz/src/icons/img_logo_cs.svg" alt="">
+        <img src="/icons/img_logo_cs.svg" alt="">
         <h3>Česká Spořitelna WebAPI</h3>
         <p>Zákaznická platforma využívána interně bankami, zároveň externě ve formě veřejné API.</p>
       </div>
