--- a/www.topmonks.cz/src/html/index.html
+++ b/www.topmonks.cz/src/html/index.html
@@ -273,54 +273,8 @@
   </div>
 </section>
 
-<section class="tm-studies">
-  <div class="mdc-layout-grid tm-layout-wrapper">
-    <div class="mdc-layout-grid__inner">
-      <div class="studies_title mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-        <h2>Jak pracujeme</h2>
-        <p class="sub-text">Vždy se naučíme něco nového ze spolupráce s našimi klienty.</p>
-      </div>
-      <div
-        class="tm-studies__clients mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
-        <a href="/case-studies/adler">
-          <div class="tm-studies__logo tm-studies__logo--adler">
-            <div class="tm-bgnd-wrapper">
-              <span class="sprite -img_logo_adler">
-                <svg viewBox="0 0 1 1"><use xlink:href="/images/icons-614ee6bf85.svg#img_logo_adler"></use></svg>
-              </span>
-            </div>
-          </div>
-          <h3>Adler</h3></a>
-        <p>Řešení na míru automatizující proces nákupu, marketingu a prodeje
-          s&nbsp;vizí, že aplikace budou v&nbsp;budoucnu integrovány do jedné komplexní
-          administrativní platformy.</p>
-      </div>
-      <div
-        class="tm-studies__clients mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
-        <div class="tm-studies__logo tm-studies__logo--pricefx inactive">
-          <div class="tm-bgnd-wrapper"><span class="sprite -img_logo_pricefx">
-            <svg viewBox="0 0 1 1"><use xlink:href="/images/icons-614ee6bf85.svg#img_logo_pricefx"></use></svg>
-          </span>
-          </div>
-        </div>
-        <h3>Price f(x)</h3>
-        <p>Poskytnutí profesionální konzultace na podporu služeb rozšiřujících portfolio zákazníků, a zároveň také pomoc
-          při zlepšování UX pro webové stránky.</p>
-      </div>
-      <div
-        class="tm-studies__clients mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
-        <div class="tm-studies__logo tm-studies__logo--ceska-sporitelna inactive">
-          <div class="tm-bgnd-wrapper"><span class="sprite -img_logo_cs">
-            <svg viewBox="0 0 1 1"><use xlink:href="/images/icons-614ee6bf85.svg#img_logo_cs"></use></svg>
-          </span>
-          </div>
-        </div>
-        <h3>Česká Spořitelna WebAPI</h3>
-        <p>Zákaznická platforma využívána interně bankami, zároveň externě ve formě veřejné API.</p>
-      </div>
-    </div>
-  </div>
-</section>
+{% set caseStudiesData = { title : 'Jak pracujeme', subTitle : 'Vždy se naučíme něco nového ze spolupráce s našimi klienty.'} %}
+{% include 'components/case-studies/index.html' %}
 
 <section class="zakaznici">
   <div class="tm-bgnd-wrapper">
