--- a/caffe.topmonks.cz/src/html/index.html
+++ b/caffe.topmonks.cz/src/html/index.html
@@ -28,7 +28,7 @@
 </header>
 <main id="main_content" class="main_content">
   <section id="uvod" class="opening">
-    <div class="mdc-layout-grid wrapper">
+    <div class="mdc-layout-grid tm-layout-wrapper">
       <div class="mdc-layout-grid__inner">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
           <h1>Teach or die, learn or die.</h1>
@@ -41,11 +41,11 @@
     </div>
   </section>
   <section id="main" class="main_info">
-    <div class="mdc-layout-grid wrapper">
+    <div class="mdc-layout-grid tm-layout-wrapper">
       <div class="mdc-layout-grid__inner">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
           <h2>Co je TopMonks Caffé?</h2>
-          <p>Firma TopMonks, pořádající setkání TopMonks Caffé je plná zajímavých a šikovných lidí, kteří se nebojí
+          <p>Firma TopMonks, pořádající setkání TopMonks Caffé, je plná zajímavých a šikovných lidí, kteří se nebojí
             svoje zkušenosti předat dál. Mezi tématy najdete programování, moderní technologie, blockchain, cestování,
             design a mnoho dalšího.</p>
         </div>
@@ -67,6 +67,24 @@
       </div>
     </div>
   </section>
+
+  <section id="recnici" class="speakers">
+    <div class="mdc-layout-grid tm-layout-wrapper">
+      <div class="mdc-layout-grid__inner">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+          <h2>Staňte se řečníky!</h2>
+        <p>Máte zajímavé téma, o&nbsp;kterém byste rádi mluvili?</p>
+          <p>Zkoušeli jste novou technologii a rádi se podělíte o&nbsp;vaše
+            zkušenosti?</p>
+          <p>Napište nám a určitě se domluvíme.</p>
+          <a class="mail" href="mailto:caffe@topmonks.com">caffe@topmonks.com</a>
+        </div>
+      </div>
+    </div>
+  </section>
+
+
+
 </main>
 
 
