Fixing html to use nbsp entity to avoid orphan chars on CS pages

--- a/www.topmonks.com/src/html/case-studies/adler/index.html
+++ b/www.topmonks.com/src/html/case-studies/adler/index.html
@@ -118,7 +118,7 @@
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 tm-case-study__section tm-case-study__section--analysis">
         <h3>Detailed workflow analysis</h3>
         <p>Detailed workflow and user behavior analysis have provided our UX designer with instant feedback on
-          prototyping. As a result, he was able to create an application that reflects the needs of a real workflow on
+          prototyping. As a result, he was able to create an application that reflects the needs of a&nbsp;real workflow on
           the customer's side.</p>
       </div>
     </div>
