--- a/www.topmonks.com/src/html/case-studies/price-fx/index.html
+++ b/www.topmonks.com/src/html/case-studies/price-fx/index.html
@@ -71,7 +71,7 @@
       <div
         class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 tm-case-study__section tm-case-study__section--right tm-case-study__section--success">
         <h3>We will turn your startup into a successful company</h3>
-        <p>Monks got involved in the Price f(x) project within their startup studio, where they provide technical consultations and development in exchange for equity - as an investment. Price f(x) is a proof TopMonks has the expertise and qualification to assist you in turning your startup into a successful multi-national corporation.</p>
+        <p>Monks got involved in the Price f(x) project within their startup studio, where they provide technical consultations and development in exchange for equity - as an investment. Price&nbsp;f(x) is a proof TopMonks has the expertise and qualification to assist you in turning your startup into a&nbsp;successful multi-national corporation.</p>
       </div>
     </div>
   </div>
@@ -94,7 +94,7 @@
       <div
         class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 tm-case-study__section tm-case-study__section--right tm-case-study__section--cloud">
         <h3>Product would greatly benefit from cloud technologies</h3>
-        <p>Pricing is vital for customers, however often unrelated to their core business. In other words almost a perfect definition of a product that would greatly benefit from cloud technologies, a field where TopMonks feels at home. Thus a customer has a service that deals with his vital problem available and can freely focus on his core business development.</p>
+        <p>Pricing is vital for customers, however often unrelated to their core business. In other words almost a perfect definition of a&nbsp;product that would greatly benefit from cloud technologies, a&nbsp;field where TopMonks feels at home. Thus a customer has a&nbsp;service that deals with his vital problem available and can freely focus on his core business development.</p>
       </div>
     </div>
   </div>
