--- a/caffe.topmonks.cz/src/html/shared/header.html
+++ b/caffe.topmonks.cz/src/html/shared/header.html
@@ -26,10 +26,10 @@
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-8-desktop">
         <nav id="navigation" class="tm-menu">
           <ul class="tm-menu__list">
-            <li class=""><a href="/about-us/">about us</a></li>
-            <li class=""><a href="/meet-us/">meet us</a></li>
-            <li class=""><a href="/contact/">contacts</a></li>
-            <li class=""><a href="https://studio.topmonks.com/">startup studio</a></li>
+            <li class=""><a href="/uvod/">about us</a></li>
+            <li class=""><a href="/clanky/">meet us</a></li>
+            <li class=""><a href="/seance/">historie</a></li>
+            <li class=""><a href="https://www.topmonks.com/">TopMonks.com</a></li>
           </ul>
         </nav>
       </div>
