Price reference removed from the box

--- a/prodeti.topmonks.cz/src/html/index.html
+++ b/prodeti.topmonks.cz/src/html/index.html
@@ -318,7 +318,7 @@
         <div
           class="price_table mdc-layout-grid__cell mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-12-desktop">
           <div class="table_head">
-            <h3>Cena zahrnuje</h3>
+            <h3>Detaily</h3>
           </div>
           <div class="table_body">
             <p>4 lekce</p>
