Caffe.topmonks.cz Microsita

--- a/caffe.topmonks.cz/src/html/shared/header.html
+++ b/caffe.topmonks.cz/src/html/shared/header.html
@@ -1,4 +1,5 @@
 <link rel="stylesheet" href="/stylesheets/header.css">
+<link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
 <header class="tm-app-bar">
   <div class="mdc-layout-grid tm-layout-wrapper">
     <div class="mdc-layout-grid__inner">
