--- a/caffe.topmonks.cz/src/html/index.html
+++ b/caffe.topmonks.cz/src/html/index.html
@@ -112,33 +112,43 @@
   <section id="uvod" class="opening">
     <div class="mdc-layout-grid tm-layout-wrapper">
       <div class="mdc-layout-grid__inner">
-        <div class="opening_text mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
+        <div class="opening_text mdc-layout-grid__cell mdc-layout-grid__cell--span-7">
           <h1>Teach or die, <br>learn or die.</h1>
           <p>Každý první čtvrtek v&nbsp;měsící se setkáváme a bavíme se
             o&nbsp;tématéch, která nás&nbsp;baví.</p>
         </div>
 
-        <div class="newest-news mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
+        <div class="newest-news mdc-layout-grid__cell mdc-layout-grid__cell--span-5">
+          <div class="mdc-layout-grid>
           <div class="mdc-layout-grid__inner">
             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
               <p>Příští téma:</p>
-              <p></p>
-            <div class="news-img">
-              <img src="/images/news1.svg" class="img-responsive">
-            </div>
-            </div>
-            <div class="date">
-              
-            </div>
-            <div class="latest-news_content">
-              <div class="date">
-                <span>2.</span>
-                <span>8.</span>
-                <span>2018</span>
+              <p>Na cestách</p>
+              <div class="news-img">
+                <img src="/images/news1.svg" class="img-responsive">
               </div>
-              <div class="news-title">
-                <p>Na cestách</p>
-              </div>
+            </div>
+            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
+            </div>
+            <div class="date mdc-layout-grid__cell mdc-layout-grid__cell--span-8">
+              <span>Thursday, August 2, 2018</span>
+              <span>7:00 PM</span>
+            </div>
+            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
+            </div>
+            <div class="place mdc-layout-grid__cell mdc-layout-grid__cell--span-8">
+              <span>Loft no. 8</span>
+              <span>Nekázanka 8, Praha</span>
+            </div>
+
+            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
+              <p>MeetUp</p>
+            </div>
+            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
+              <p>45 účastníků</p>
+            </div>
+            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+              <a href="" class="button">Potvrdit účast</a>
             </div>
           </div>
         </div>
