oprava failed commits

--- a/caffe.topmonks.cz/src/html/index.html
+++ b/caffe.topmonks.cz/src/html/index.html
@@ -112,13 +112,13 @@
   <section id="uvod" class="opening">
     <div class="mdc-layout-grid tm-layout-wrapper">
       <div class="mdc-layout-grid__inner">
-        <div class="opening_text mdc-layout-grid__cell mdc-layout-grid__cell--span-7">
+        <div class="opening_text mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
           <h1>Teach or die, <br>learn or die.</h1>
           <p>Každý první čtvrtek v&nbsp;měsící se setkáváme a bavíme se
             o&nbsp;tématéch, která nás&nbsp;baví.</p>
         </div>
 
-        <div class="newest-news mdc-layout-grid__cell mdc-layout-grid__cell--span-5">
+        <div class="newest-news mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
           <div class="mdc-layout-grid>
           <div class="mdc-layout-grid__inner">
             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
@@ -131,13 +131,13 @@
             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
             </div>
             <div class="date mdc-layout-grid__cell mdc-layout-grid__cell--span-8">
-              <span>Thursday, August 2, 2018</span>
+              <span>Thursday, August 2, 2018</span><br>
               <span>7:00 PM</span>
             </div>
             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
             </div>
             <div class="place mdc-layout-grid__cell mdc-layout-grid__cell--span-8">
-              <span>Loft no. 8</span>
+              <span>Loft no. 8</span><br>
               <span>Nekázanka 8, Praha</span>
             </div>
 
