Caffe - sekce Uvod - Účast

--- a/caffe.topmonks.cz/src/html/index.html
+++ b/caffe.topmonks.cz/src/html/index.html
@@ -127,7 +127,7 @@
                 <img src="/images/news1.svg" class="img-responsive">
               </div>
             </div>
-            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
+            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3">
               <svg width="18px" height="18px" viewBox="0 0 18 18" version="1.1" xmlns="http://www.w3.org/2000/svg"
                    xmlns:xlink="http://www.w3.org/1999/xlink">
                 <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" stroke-linecap="round"
@@ -142,11 +142,11 @@
                 </g>
               </svg>
             </div>
-            <div class="date mdc-layout-grid__cell mdc-layout-grid__cell--span-8">
+            <div class="date mdc-layout-grid__cell mdc-layout-grid__cell--span-9">
               <span>Thursday, August 2, 2018</span><br>
               <span>7:00 PM</span>
             </div>
-            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
+            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3">
               <svg width="18px" height="22px" viewBox="0 0 18 22" version="1.1" xmlns="http://www.w3.org/2000/svg"
                    xmlns:xlink="http://www.w3.org/1999/xlink">
                 <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" stroke-linecap="round"
@@ -163,11 +163,13 @@
                 </g>
               </svg>
             </div>
-            <div class="place mdc-layout-grid__cell mdc-layout-grid__cell--span-8">
+            <div class="place mdc-layout-grid__cell mdc-layout-grid__cell--span-9">
               <span>Loft no. 8</span><br>
               <span>Nekázanka 8, Praha</span>
             </div>
-
+            <div class="place mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+              <hr>
+            </div>
             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
               <svg width="77px" height="32px" viewBox="0 0 77 32" version="1.1" xmlns="http://www.w3.org/2000/svg"
                    xmlns:xlink="http://www.w3.org/1999/xlink">
@@ -183,10 +185,10 @@
                 </g>
               </svg>
             </div>
-            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
+            <div class="users mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
               <p>45 účastníků</p>
             </div>
-            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+            <div class="confirm-btn mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
               <a href="" class="button">Potvrdit účast</a>
             </div>
           </div>
