caffe. Sekce Uvod

--- a/caffe.topmonks.cz/src/html/index.html
+++ b/caffe.topmonks.cz/src/html/index.html
@@ -120,9 +120,15 @@
 
         <div class="newest-news mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
           <div class="mdc-layout-grid__inner">
-            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-              <p>Příští téma:</p>
+            <div class="news_content mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+             <div class="date">
+               <span>Příští téma:</span>
+             </div>
+              <div class="news-title">
               <p>Na cestách</p>
+              </div>
+            </div>
+            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
               <div class="news-img">
                 <img src="/images/news1.svg" class="img-responsive">
               </div>
@@ -220,7 +226,7 @@
           <div class="news-img">
             <img src="/images/news1.svg" class="img-responsive">
           </div>
-          <div class="latest-news_content">
+          <div class="news_content">
             <div class="date">
               <span>2.</span>
               <span>8.</span>
@@ -236,7 +242,7 @@
           <div class="news-img">
             <img src="/images/news2.svg" class="img-responsive">
           </div>
-          <div class="latest-news_content">
+          <div class="news_content">
             <div class="date">
               <span>2.</span>
               <span>8.</span>
@@ -252,7 +258,7 @@
           <div class="news-img">
             <img src="/images/news3.svg" class="img-responsive">
           </div>
-          <div class="latest-news_content">
+          <div class="news_content">
             <div class="date">
               <span>2.</span>
               <span>8.</span>
