prodeti.topmonks.cz Rodiče sekce

--- a/prodeti.topmonks.cz/src/html/index.html
+++ b/prodeti.topmonks.cz/src/html/index.html
@@ -335,36 +335,41 @@
       <div class="mdc-layout-grid__inner">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
           <h2>Co říkají rodiče</h2>
-          <div class="slides-wrap">
-            <div class="slide">
-              <div class="photo">
-                <img src="/images/rodice/tomas.jpg" alt="[fotografie] Tomáš záluský">
-              </div>
-              <blockquote class="description">
-                <p>Pro našeho desetiletého Matěje a osmiletou Janičku byla akce i&nbsp;odměnou
-                  za vysvědčení a navíc výletem 100&nbsp;km do Prahy. Dětem se roboti tak
-                  líbily, že jsem jim musel pořídit dva domů. Doma ještě dohnaly
-                  vyblbnutí, které nestihly v&nbsp;TopMonks.</p>
-              </blockquote>
-              <div class="name">
-                Tomáš Záluský
-              </div>
+        </div>
 
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
+          <div class="slide">
+            <div class="photo">
+              <img src="/images/rodice/tomas.jpg" alt="[fotografie] Tomáš záluský">
             </div>
-            <div class="slide">
-              <div class="photo">
-                <img src="/images/rodice/jirka.jpg" alt="[fotografie] Jiří Píša">
-              </div>
-              <blockquote class="description">
-                <p>Kluk se vrátil z&nbsp;akce Programování pro děti absolutně nadšený a
-                  těší se na její pokračování. Líbí se mi, že dokážete do tajů IT
-                  zasvětit i&nbsp;malé děti a ukázat jim, že tablet mohou využívat
-                  i&nbsp;aktivněji než jen sledováním videí na youtube.</p>
-              </blockquote>
-              <div class="name">
-                Jiří Píša
-              </div>
+            <blockquote class="description">
+              <p>Pro našeho desetiletého Matěje a osmiletou Janičku byla akce i&nbsp;odměnou
+                za vysvědčení a navíc výletem 100&nbsp;km do Prahy. Dětem se roboti tak
+                líbily, že jsem jim musel pořídit dva domů. Doma ještě dohnaly
+                vyblbnutí, které nestihly v&nbsp;TopMonks.</p>
+            </blockquote>
+            <div class="name">
+              Tomáš Záluský
             </div>
+          </div>
+        </div>
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
+          <div class="slide">
+            <div class="photo">
+              <img src="/images/rodice/jirka.jpg" alt="[fotografie] Jiří Píša">
+            </div>
+            <blockquote class="description">
+              <p>Kluk se vrátil z&nbsp;akce Programování pro děti absolutně nadšený a
+                těší se na její pokračování. Líbí se mi, že dokážete do tajů IT
+                zasvětit i&nbsp;malé děti a ukázat jim, že tablet mohou využívat
+                i&nbsp;aktivněji než jen sledováním videí na youtube.</p>
+            </blockquote>
+            <div class="name">
+              Jiří Píša
+            </div>
+          </div>
+        </div>
+        <!---
             <div class="slide">
               <div class="photo">
                 <img src="/images/rodice/anicka.jpg" alt="[fotografie] Anna Cihlová"
@@ -380,37 +385,39 @@
               <div class="name">
                 Anna Cihlová
               </div>
-            </div>
-            <div class="slide">
-              <div class="photo">
-                <img src="/images/rodice/prema.jpg" alt="[fotografie] Přemysl Novák"
-                     style="filter: grayscale(1.0) brightness(1.1);">
-              </div>
-              <blockquote class="description">
-                <p>Na Kurzech pro děti se mi líbí, že celé probíhají opravdu ve hře.
-                  Děti jsou nenuceným způsobem seznámeni s&nbsp;kódy a výpočetními technikami,
-                  které do IT patří. Syna to moc bavilo, a proto byl celý kurz aktivní a
-                  zároveň soustředěný. Hodně si z&nbsp;toho odnesl.</p>
-              </blockquote>
-              <div class="name">
-                Přemysl Novák
-              </div>
-            </div>
-            <div class="slide">
-              <div class="photo">
-                <img src="/images/rodice/ondra.jpg" alt="[fotografie] Ondřej Sedloň">
-              </div>
-              <blockquote class="description">
-                <p>Programování pro děti zaujalo mou dcerku Magdalénu natolik, že se
-                  v&nbsp;průběhu akce začala přetahovat s&nbsp;chlapečkem o&nbsp;robotka Genius a nakonec
-                  musela tvrdě “vyjednat” win-win řešení, jak se o&nbsp;něj nepoprat. Abychom
-                  se mohli z&nbsp;nově nabytých znalostí těšit déle, pořídili jsme hned
-                  jednoho&nbsp;domů…</p>
-              </blockquote>
-              <div class="name">
-                Ondřej Sedloň
-              </div>
-            </div>
+
+      </div>-->
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
+        <div class="slide">
+          <div class="photo">
+            <img src="/images/rodice/prema.jpg" alt="[fotografie] Přemysl Novák"
+                 style="filter: grayscale(1.0) brightness(1.1);">
+          </div>
+          <blockquote class="description">
+            <p>Na Kurzech pro děti se mi líbí, že celé probíhají opravdu ve hře.
+              Děti jsou nenuceným způsobem seznámeni s&nbsp;kódy a výpočetními technikami,
+              které do IT patří. Syna to moc bavilo, a proto byl celý kurz aktivní a
+              zároveň soustředěný. Hodně si z&nbsp;toho odnesl.</p>
+          </blockquote>
+          <div class="name">
+            Přemysl Novák
+          </div>
+        </div>
+      </div>
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
+        <div class="slide">
+          <div class="photo">
+            <img src="/images/rodice/ondra.jpg" alt="[fotografie] Ondřej Sedloň">
+          </div>
+          <blockquote class="description">
+            <p>Programování pro děti zaujalo mou dcerku Magdalénu natolik, že se
+              v&nbsp;průběhu akce začala přetahovat s&nbsp;chlapečkem o&nbsp;robotka Genius a nakonec
+              musela tvrdě “vyjednat” win-win řešení, jak se o&nbsp;něj nepoprat. Abychom
+              se mohli z&nbsp;nově nabytých znalostí těšit déle, pořídili jsme hned
+              jednoho&nbsp;domů…</p>
+          </blockquote>
+          <div class="name">
+            Ondřej Sedloň
           </div>
         </div>
       </div>
