--- a/caffe.topmonks.cz/src/html/index.html
+++ b/caffe.topmonks.cz/src/html/index.html
@@ -120,7 +120,8 @@
 
         <div class="newest-news mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
           <div class="mdc-layout-grid__inner">
-            <div class="news_content mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+              <div class="news_content">
              <div class="date">
                <span>Příští téma:</span>
              </div>
@@ -128,12 +129,11 @@
               <p>Na cestách</p>
               </div>
             </div>
-            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
               <div class="news-img">
                 <img src="/images/news1.svg" class="img-responsive">
               </div>
             </div>
-            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3">
+            <div class="date mdc-layout-grid__cell mdc-layout-grid__cell--span-3">
               <svg width="18px" height="18px" viewBox="0 0 18 18" version="1.1" xmlns="http://www.w3.org/2000/svg"
                    xmlns:xlink="http://www.w3.org/1999/xlink">
                 <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" stroke-linecap="round"
@@ -152,7 +152,7 @@
               <span>Thursday, August 2, 2018</span><br>
               <span>7:00 PM</span>
             </div>
-            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3">
+            <div class=" place mdc-layout-grid__cell mdc-layout-grid__cell--span-3">
               <svg width="18px" height="22px" viewBox="0 0 18 22" version="1.1" xmlns="http://www.w3.org/2000/svg"
                    xmlns:xlink="http://www.w3.org/1999/xlink">
                 <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" stroke-linecap="round"
@@ -173,11 +173,8 @@
               <span>Loft no. 8</span><br>
               <span>Nekázanka 8, Praha</span>
             </div>
-            <div class="place mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-              <hr>
-            </div>
-            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
-              <svg width="77px" height="32px" viewBox="0 0 77 32" version="1.1" xmlns="http://www.w3.org/2000/svg"
+            <div class="meetup-logo mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
+              <svg width="84px" height="44px" viewBox="0 0 77 32" version="1.1" xmlns="http://www.w3.org/2000/svg"
                    xmlns:xlink="http://www.w3.org/1999/xlink">
                 <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
                   <g id="Desktop-HD" transform="translate(-806.000000, -504.000000)">
