Caffe. Footer - trans do češtiny

--- a/caffe.topmonks.cz/src/html/shared/footer.html
+++ b/caffe.topmonks.cz/src/html/shared/footer.html
@@ -5,22 +5,22 @@
   <div class="mdc-layout-grid">
     <div class="mdc-layout-grid__inner tm-layout-wrapper">
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-6-desktop">
-        <h3>About</h3>
-        <p>We are your software development partners, experienced with both startup and corporate environment.</p>
-        <p>If you like these ideas, come and <a href="/company-values/">join us</a>, and have your <a
-          href="/references">project delivered by us</a>.
-          Or simply <a href="/contact/">visit us</a>. We enjoy <a href="/meet-us/">meeting interesting people</a>.
+        <h3>O nás</h3>
+        <p>Jsme vývojáři softwaru pro váš byznys se zkušenostmi jak se startupy, tak s korporátním prostředím.</p>
+        <p>Pokud se ti líbí naše myšlení, přijď a <a href="/o-nas/">přidej se k nám</a> a dej nám vědět, jak ti
+          <a href="/o-nas/">můžeme pomoci s tvým projektem</a>.
+          Nebo nás jednoduše <a href="/kontakt/">přijď navštívit</a>. Rádi <a href="/kde-nas-najdete/">potkáváme nové a zajímavé lidi</a>.
         </p>
       </div>
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop">
-        <h3>Navigation</h3>
+        <h3>Navigace</h3>
         <nav>
           <ul>
             <li><a href="/">Home</a></li>
             <li><a href="https://studio.topmonks.com/">Startup Studio</a></li>
             <li><a href="https://teams.topmonks.com/">Teams as Service</a></li>
-            <li><a href="https://prodeti.topmonks.cz/">Programming for Kids</a></li>
-            <li><a href="/contact/">Contacts</a></li>
+            <li><a href="https://prodeti.topmonks.cz/">Programování pro děti</a></li>
+            <li><a href="/www.topmonks.cz/src/html/kontakt/">Kontakt</a></li>
           </ul>
         </nav>
       </div>
