Caffe.: Sekce Uvod

--- a/caffe.topmonks.cz/src/html/index.html
+++ b/caffe.topmonks.cz/src/html/index.html
@@ -213,8 +213,10 @@
                 </div>
               </div>
 
+              <div class="mdc-layout-grid__inner">
               <div class="confirm-btn mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
                 <a href="" class="button">Potvrdit účast</a>
+              </div>
               </div>
 
             </div>
@@ -288,7 +290,7 @@
         </div>
 
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-          <a href="">Další témata ...</a>
+          <a href="https://blog.topmonks.com/">Další témata ...</a>
         </div>
       </div>
     </div>
@@ -337,6 +339,7 @@
 
 </main>
 
+<!--
 
 <div class="mdc-layout-grid">
   <div class="mdc-layout-grid__inner poster">
@@ -928,5 +931,6 @@
     </div>
   </div>
 </div>
+-->
 
 {% endblock %}
