caffe. Seance sekce

--- a/caffe.topmonks.cz/src/html/index.html
+++ b/caffe.topmonks.cz/src/html/index.html
@@ -329,7 +329,7 @@
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3">
           <img src="/images/frontend.svg">
         </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+        <div class="seance_posters mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
           <a href="">Zobrazit všechny...</a>
         </div>
       </div>
